# bitlight-ssi-man

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  diesel.toml  rust-toolchain.toml
.github/workflows/: build.yaml  main.yaml
migrations/2024-10-31-143532_create_identity_ssi_secrets/: down.sql  up.sql
sqlite3/: Makefile.toml
sqlite3/jni/: Android.mk  Application.mk
src/: ffi.rs  lib.rs  memory.rs  schema.rs  sqlite.rs
