[package]
name = "ssi-man"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
diesel = { version = "2.2", default-features = false, optional = true }
diesel_migrations = { version = "2.2", default-features = false, optional = true }
libc = "0.2"
s2id = "0.3.0-alpha.1"
thiserror = "2.0"

[build-dependencies]
anyhow = "1.0"
cbindgen = "0.27"

[dev-dependencies]
once_cell = "1.20"
time = "0.3.36"

[patch.crates-io]
s2id = { git = "https://github.com/Crayon-Shin-chan-bitlightlabs/ssi.git", branch = "bitlight-temp" }

[features]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "diesel_migrations/sqlite"]

[profile.release-space-optimized]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"